Working on overflow fixes

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -21,6 +21,7 @@ body{
     float: left;
     position: absolute;
     margin: auto;
+    /* display: inline; */
     top: 0;
     left: 0;
     right: 0;
@@ -39,18 +40,19 @@ body{
 
 
 #header{
-    max-height: 4rem;
+
 }
 
 #logo{
     margin: 1.2%;
     margin-right: 1%;
-    font-size: 2.4em;
-    overflow: hidden;
+    font-size: 2.4rem;
+    height: 3em;
+    /* overflow: hidden; */
     /* white-space: nowrap; */
     width: 80%;
     /* height: 80%; */
-    max-height: 4rem;
-    margin: center;
+    /* max-height: 4rem; */
+    /* margin: center; */
     /* position: absolute; */
 }
